# Project-Clementine

./: .gitignore  .notes.txt  Dockerfile  Project Clementine next steps.md  README.md  clementine.example.yaml  dvwa-test.db-shm  dvwa-test.db-wal  project-clementine-design-spec.md  pyproject.toml  test-scenario-azure.md  test-scenario-dvwa-aws.md
clementine/: __init__.py  aws_creds.py  cli.py  config.py  db.py  mcp_client.py  orchestrator.py  sanitize.py  scope.py
clementine/ai/: __init__.py  client.py  discovery.py  triage.py
clementine/correlation/: engine.py
clementine/db/: __init__.py  models.py  schema.py  store.py
clementine/graph/: __init__.py  attack_surface.py  azure_enrichment.py  azure_model.py  builder.py  iam_enrichment.py  model.py
clementine/phases/: __init__.py  _autopentest.py  ai_triage.py  app_test.py  aws_audit.py  azure_audit.py  correlate.py  iac_scan.py  recon.py  report.py
clementine/reporting/: __init__.py  html.py  sarif.py  security_hub.py
examples/: example_graph.html  example_report.html
k8s/: clementine-workload-identity.yaml
patterns/: api_gateway_unauth_lambda_rds.yaml  broken_function_level_auth_rce.yaml  ci_oidc_misconfiguration_supply_chain.yaml  cloudformation_iam_privilege_escalation.yaml  cloudtrail_disabled_iam_persistence.yaml  cmd_injection_imds_credential_theft.yaml  cognito_unauth_role_escalation.yaml  csrf_privileged_state_change.yaml  ecr_public_image_secrets.yaml  ecs_task_escape_overprivileged_role.yaml  eks_hostnetwork_imds_credential_theft.yaml  eks_irsa_oidc_trust_too_broad.yaml  eks_service_account_iam_escalation.yaml  exposed_secrets_lateral.yaml  glue_dev_endpoint_privilege_escalation.yaml  golden_saml_sso_bypass.yaml  graphql_introspection_idor.yaml  http_request_smuggling_auth_bypass.yaml  iam_assume_chain_to_admin_via_edges.yaml  iam_policy_rollback_privilege_escalation.yaml  iam_trust_policy_too_broad.yaml  idor_bulk_pii_harvest.yaml  insecure_deserialization_rce_pivot.yaml  jwt_weak_secret_privilege_escalation.yaml  lambda_backdoor_privilege_escalation.yaml  lambda_env_secrets_exposed.yaml  lambda_layer_supply_chain.yaml  log4shell_rce_imds_chain.yaml  missing_logging_blind_exploit.yaml  no_mfa_brute_force_takeover.yaml  nosqli_auth_bypass_data_access.yaml  oauth_open_redirect_token_theft.yaml  path_traversal_source_secrets.yaml  rds_public_snapshot_data_dump.yaml  s3_public_bucket_sensitive_data.yaml  ssm_parameter_store_ssrf_exfil.yaml  ssrf_imds_iam.yaml  ssrf_secrets_manager_mass_harvest.yaml  ssti_rce_credential_theft.yaml  stale_iam_key_hardcoded_exposure.yaml  (+6 more)
project-clementine/: .gitignore  clementine.yaml  findings.db  test-scenario-dvwa-aws.md
reports/: report.md  report.sarif
scripts/: aws_audit_probe.py  generate_example_report.py  iac_collect.sh
(+98 files in other folders)
