[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clementine"
version = "0.1.0"
description = "Automated web-app penetration-testing orchestrator (Project Clementine)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # MCP client — stdio and SSE/streamable-HTTP transports
    "mcp>=1.0.0",
    # Config validation
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # Async SQLite
    "aiosqlite>=0.19",
    # HTTP client used for remote MCP servers (AWS Knowledge MCP)
    "httpx>=0.27",
    # Directed-graph library for the correlation engine
    "networkx>=3.2",
    # HTML report templating
    "jinja2>=3.1",
    # CLI
    "click>=8.1",
    # AWS SDK — used to push findings to Security Hub
    "boto3>=1.34",
    # Anthropic SDK with Bedrock transport — powers AI triage and novel-chain discovery
    "anthropic[bedrock]>=0.43.0",
    # Azure SDKs — required for Phase 2b Azure audit and cloud-audit Azure module
    "azure-identity>=1.17",
    "azure-mgmt-resource>=23.0",
    "azure-mgmt-authorization>=4.0",
    "azure-mgmt-resourcegraph>=8.0",
    "azure-mgmt-network>=25.0",
    "azure-mgmt-compute>=31.0",
    "azure-mgmt-keyvault>=10.0",
    "azure-mgmt-storage>=21.0",
    "azure-mgmt-containerservice>=30.0",
    "azure-mgmt-msi>=7.0",
    "azure-mgmt-web>=7.0",
    "azure-mgmt-monitor>=6.0",
    "msgraph-sdk>=1.0",
]

[project.scripts]
# Primary entry-point: `clementine run --config clementine.yaml`
clementine = "clementine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["clementine"]
